2009-05-15  Paolo Carlini  <paolo.carlini@oracle.com>

PR libstdc++/40160
	* include/debug/formatter.h (_Parameter::_Parameter): Don't use
	typeid when __GXX_RTTI is undefined.
	* src/debug.cc (_Error_formatter::_Parameter::_M_print_field): Adjust
	for null _M_variant._M_iterator._M_type,
	_M_variant._M_iterator._M_seq_type, _M_variant._M_sequence._M_type.
	* testsuite/21_strings/basic_string/40160.cc: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147599 138bc75d-0d04-0410-961f-82ee72b054a4